fix roles vistas